--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,31 +3,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/homeFragment">
+    app:startDestination="@id/friends_list">
 
     <fragment
-        android:id="@+id/listFragment"
-        android:name="com.example.giftgiver.fragments.ListFragment"
-        android:label="fragment_list"
-        tools:layout="@layout/fragment_list">
+        android:id="@+id/friends_list"
+        android:name="com.example.giftgiver.fragments.FriendsListFragment"
+        android:label="@string/friends_list"
+        tools:layout="@layout/fragment_friends_list">
         <argument
             android:name="friendsListState"
             app:argType="com.example.giftgiver.utils.FriendsListState" />
         <action
-            android:id="@+id/action_listFragment_to_userFragment"
-            app:destination="@id/userFragment" />
+            android:id="@+id/action_friendsListFragment_to_userFragment"
+            app:destination="@id/user_fragment" />
     </fragment>
     <fragment
-        android:id="@+id/homeFragment"
-        android:name="com.example.giftgiver.fragments.HomeFragment"
-        android:label="fragment_home"
-        tools:layout="@layout/fragment_home">
-        <action
-            android:id="@+id/action_homeFragment_to_listFragment"
-            app:destination="@id/listFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/userFragment"
+        android:id="@+id/user_fragment"
         android:name="com.example.giftgiver.fragments.UserFragment"
         android:label="fragment_user"
         tools:layout="@layout/fragment_user" >
@@ -35,4 +26,24 @@
             android:name="user"
             app:argType="com.example.giftgiver.user.User" />
     </fragment>
+    <fragment
+        android:id="@+id/account"
+        android:name="com.example.giftgiver.fragments.AccountFragment"
+        android:label="@string/account"
+        tools:layout="@layout/fragment_account" />
+    <fragment
+        android:id="@+id/calendar"
+        android:name="com.example.giftgiver.fragments.CalendarFragment"
+        android:label="@string/calendar"
+        tools:layout="@layout/fragment_calendar" />
+    <fragment
+        android:id="@+id/cart"
+        android:name="com.example.giftgiver.fragments.CartFragment"
+        android:label="@string/cart"
+        tools:layout="@layout/fragment_cart" />
+    <fragment
+        android:id="@+id/wishlists"
+        android:name="com.example.giftgiver.fragments.WishlistsFragment"
+        android:label="@string/wishlists"
+        tools:layout="@layout/fragment_wishlists" />
 </navigation>
