--- a/app/src/main/res/drawable/nav_color_state.xml
+++ b/app/src/main/res/drawable/nav_color_state.xml
@@ -2,5 +2,5 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:color="@color/accent" android:state_checked="true" />
-    <item android:color="@color/icons" android:state_checked="false" />
+    <item android:color="@color/primary_dark" android:state_checked="false" />
 </selector>
