--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -29,4 +29,7 @@
         <item name="labelBehavior">floating</item>
     </style>
 
+    <style name="FABStyle">
+        <item name="colorOnSecondary">@color/black</item>
+    </style>
 </resources>
