try adding nested graph

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,27 +6,6 @@
     app:startDestination="@id/friends_list">
 
     <fragment
-        android:id="@+id/friends_list"
-        android:name="com.example.giftgiver.fragments.FriendsListFragment"
-        android:label="@string/friends_list"
-        tools:layout="@layout/fragment_friends_list">
-        <argument
-            android:name="friendsListState"
-            app:argType="com.example.giftgiver.utils.FriendsListState" />
-                <action
-                    android:id="@+id/action_friendsListFragment_to_userFragment"
-                    app:destination="@id/user_fragment" />
-    </fragment>
-        <fragment
-            android:id="@+id/user_fragment"
-            android:name="com.example.giftgiver.fragments.UserFragment"
-            android:label="fragment_user"
-            tools:layout="@layout/fragment_user" >
-            <argument
-                android:name="user"
-                app:argType="com.example.giftgiver.entities.User" />
-        </fragment>
-    <fragment
         android:id="@+id/account"
         android:name="com.example.giftgiver.fragments.AccountFragment"
         android:label="@string/account"
@@ -46,4 +25,28 @@
         android:name="com.example.giftgiver.fragments.WishlistsFragment"
         android:label="@string/wishlists"
         tools:layout="@layout/fragment_wishlists" />
+    <navigation android:id="@+id/friends"
+        app:startDestination="@id/friends_list">
+        <fragment
+            android:id="@+id/friends_list"
+            android:name="com.example.giftgiver.fragments.FriendsListFragment"
+            android:label="@string/friends_list"
+            tools:layout="@layout/fragment_friends_list">
+            <argument
+                android:name="friendsListState"
+                app:argType="com.example.giftgiver.utils.FriendsListState" />
+            <action
+                android:id="@+id/action_friendsListFragment_to_userFragment"
+                app:destination="@id/user_fragment" />
+        </fragment>
+        <fragment
+            android:id="@+id/user_fragment"
+            android:name="com.example.giftgiver.fragments.UserFragment"
+            android:label="fragment_user"
+            tools:layout="@layout/fragment_user">
+            <argument
+                android:name="user"
+                app:argType="com.example.giftgiver.entities.User" />
+        </fragment>
+    </navigation>
 </navigation>
