--- a/app/src/main/res/menu/menu_bottom_nav.xml
+++ b/app/src/main/res/menu/menu_bottom_nav.xml
@@ -12,7 +12,7 @@
         android:title="@string/wishlists" />
 
     <item
-        android:id="@+id/friends_list"
+        android:id="@+id/friends"
         android:icon="@drawable/ic_home_foreground"
         android:title="@string/friends_list" />
 
