--- a/app/src/main/res/drawable/ic_add_foreground.xml
+++ b/app/src/main/res/drawable/ic_add_foreground.xml
@@ -9,7 +9,7 @@
       android:translateX="2.0088"
       android:translateY="2.0088">
     <path
-        android:fillColor="@android:color/white"
+        android:fillColor="@android:color/black"
         android:pathData="M19,13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"/>
   </group>
 </vector>
