--- a/app/src/main/res/menu/menu_bottom_nav.xml
+++ b/app/src/main/res/menu/menu_bottom_nav.xml
@@ -7,7 +7,7 @@
         android:title="@string/account" />
 
     <item
-        android:id="@+id/wishlists"
+        android:id="@+id/myWishlistFragment"
         android:icon="@drawable/ic_wishlist_foreground"
         android:title="@string/wishlists" />
 
