--- a/app/src/main/res/layout/fragment_friends_list.xml
+++ b/app/src/main/res/layout/fragment_friends_list.xml
@@ -9,6 +9,7 @@
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
+        android:textAlignment="center"
         android:layout_width="0dp"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
