--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -113,7 +113,7 @@
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="64dp"
         android:backgroundTint="@color/accent"
-        android:text="Logout"
+        android:text="@string/logout"
         android:textSize="16sp"
         android:textStyle="bold"
         app:cornerRadius="12dp"
