--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/friends">
+    app:startDestination="@id/startFragment">
 
     <fragment
         android:id="@+id/account"
@@ -13,6 +13,9 @@
         <action
             android:id="@+id/action_account_to_myWishlistFragment"
             app:destination="@id/myWishlistFragment" />
+        <action
+            android:id="@+id/action_account_to_startFragment"
+            app:destination="@id/startFragment" />
     </fragment>
     <fragment
         android:id="@+id/calendar"
@@ -80,5 +83,14 @@
         <argument
             android:name="wishlistIndex"
             app:argType="integer" />
+    </fragment>
+    <fragment
+        android:id="@+id/startFragment"
+        android:name="com.example.giftgiver.presentation.fragments.StartFragment"
+        android:label="fragment_start"
+        tools:layout="@layout/fragment_start" >
+        <action
+            android:id="@+id/action_startFragment_to_friends"
+            app:destination="@id/friends" />
     </fragment>
 </navigation>
