--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.GiftGiver" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.GiftGiver" parent="Theme.MaterialComponents.DayNight">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryVariant">@color/primary_dark</item>
@@ -12,9 +12,10 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="appBarLayoutStyle">@style/MyActionBarTheme</item>
     </style>
 
-    <style name="MyActionBarTheme" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="MyActionBarTheme" parent="Widget.AppCompat.ActionBar">
         <item name="android:background">@color/primary_dark</item>
         <item name="titleTextColor">@color/primary_text</item>
         <item name="titleCentered">true</item>
