--- a/app/src/main/res/layout/fragment_friends_wishlist.xml
+++ b/app/src/main/res/layout/fragment_friends_wishlist.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:foregroundTint="@color/black"
-    tools:context=".presentation.fragments.MyWishlistFragment">
+    tools:context=".presentation.fragments.WishlistFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_gifts"
@@ -16,17 +16,4 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/item_gift" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/addItem"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="128dp"
-        android:clickable="true"
-        android:padding="0dp"
-        android:src="@drawable/ic_add_foreground"
-        android:theme="@style/ThemeOverlay.GiftGiver.FloatingActionButton"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
