--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -79,7 +79,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_wishlists"
-        tools:listitem="@layout/item_friend_wishlist" />
+        tools:listitem="@layout/item_wishlist" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
