--- a/app/src/main/res/layout/dialog_add_wishlist.xml
+++ b/app/src/main/res/layout/dialog_add_wishlist.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.fragments.AddWishlistDialogFragment">
+    tools:context=".presentation.fragments.AddWishlistDialog">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/til_name"
