--- a/app/src/main/res/menu/menu_delete.xml
+++ b/app/src/main/res/menu/menu_delete.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/edit"
+        android:id="@+id/delete"
         android:icon="@drawable/ic_delete_foreground"
         android:title="@string/delete_all"
         app:showAsAction="always" />
