--- a/app/src/main/res/menu/menu_filter.xml
+++ b/app/src/main/res/menu/menu_filter.xml
@@ -2,6 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/searchView"
+        android:icon="@android:drawable/ic_menu_search"
+        android:iconTint="@color/black"
+        android:title="@string/search"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
+        app:showAsAction="always" />
+    <item
         android:id="@+id/filter"
         android:icon="@drawable/ic_filter_foreground"
         android:title="@string/filter"
